# autocomplete_api

./: .gitignore  CMakeLists.txt  Makefile  main.cc
controllers/: ApiController.cc  ApiController.h
includes/: app.cpp  app.hpp
migrations/: CMakeLists.txt  main.cc
scripts/: setup-mongocxx.sh  setup-mongodb.sh
seeder/: CMakeLists.txt  main.cc
seeder/src/: communes.cpp  departements.cpp  regions.cpp  seeder.cpp  seeder.hpp
test/: CMakeLists.txt
